Made code Java 1.8 compliant